--- a/src/main/resources/templates/thongke.html
+++ b/src/main/resources/templates/thongke.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
 <meta charset="UTF-8">
-<title>Thống Kê</title>
+<title>Sales statistics</title>
 <div th:replace="/header :: header"></div>
 <style type="text/css">
 .searchCol {
@@ -36,14 +36,14 @@
 						fontWeight: "bolder",
         				fontColor: "#008B8B",
         				fontFamily: "tahoma",  
-				      	text: "Biểu đồ thống kê số lượng sản phẩm bán ra trong vòng 7 ngày"
+				      	text: "Statistical chart of the number of products sold within 7 days"
 				    },
 					axisX:{
-       					title: "Ngày bán",
+       					title: "Date of sale",
 						titleFontColor: "red"
      				 },
       				axisY:{
-       					title: "Số lượng",
+       					title: "Amount",
 						titleFontColor: "red"
       				},
 				    data: [
@@ -68,7 +68,7 @@
 		<section class="clean-block clean-cart dark">
 			<div class="container">
 				<div class="block-heading" style="padding-top: 0px">
-					<h2 class="text-info">Thống Kê Bán Hàng</h2>
+					<h2 class="text-info">Sales statistics</h2>
 				</div>
 				<div class="content">
 					<div class="row no-gutters">
